# microbiome-agent

./: .gitignore  README.md  ROADMAP.md  SETUP_NOTES.md  bootstrap.sh  pyproject.toml  requirements.txt
scripts/: export_curatedMetagenomicData.R
src/microbiome_agent/agent/: __init__.py  __main__.py  loop.py
src/microbiome_agent/analysis/: differential_abundance.py  diversity.py  enrichment.py  report.py
src/microbiome_agent/datasets/: __init__.py  loaders.py
src/microbiome_agent/datasets/example/: README.md  abundance.csv  metadata.csv
src/microbiome_agent/mcp_server/: server.py
tests/: test_agent_loop.py  test_differential_abundance.py  test_diversity.py  test_enrichment.py  test_loaders.py  test_mcp_server.py  test_report.py
