[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "microbiome-agent"
version = "0.1.0"
description = "An AI agent that orchestrates microbiome analysis tools via MCP."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"microbiome_agent.datasets" = ["example/*.csv"]
